# maze_walker_bevy

./: .gitignore  .gitmodules  Cargo.toml  package-lock.json
js/: index.ts
src/: actor.rs  breadcrumb.rs  lib.rs  main.rs  mouse.rs
static/: index.html
