# You must change these to your own details.
[package]
name = "maze_walker_bevy"
description = "Bevy attempt to animate"
version = "0.1.0"
authors = ["You <you@example.com>"]
readme = "README.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.7.0", features = ["dynamic"] }
maze_walker = { path = "./maze_walker" }
